# python-evdev

./: pyproject.toml
.github/workflows/: publish.yaml  pytest.yaml
docs/: conf.py
src/evdev/: genecodes_c.py  input.c  uinput.c
tests/: test_free_threaded.py
