[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evdev"
version = "1.9.3"
description = "Bindings to the Linux input handling subsystem"
keywords = ["evdev", "input", "uinput"]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
  { name="Georgi Valkov", email="georgi.t.valkov@gmail.com" },
]
maintainers = [
  { name="Tobi", email="proxima@sezanzeb.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
"Homepage" = "https://github.com/gvalkov/python-evdev"

[dependency-groups]
test = ["pytest"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E265", "E241", "F403", "F401", "E401", "E731"]

[tool.cibuildwheel]
# evdev is Linux-only (needs <linux/input.h>): no macOS/Windows wheels exist.
# Build CPython 3.11-3.14 incl. the free-threaded 3.13t/3.14t builds; glibc only
# (musllinux skipped), CPython only (no PyPy).
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*", "cp313t-*", "cp314t-*"]
enable = ["cpython-freethreading"]
skip = ["*-musllinux*", "pp*"]
archs = "native"
build-frontend = "build[uv]"
# Smoke-test that the wheel imports and every compiled extension loads.
test-command = "python -c \"import evdev, evdev.ecodes, evdev._input, evdev._uinput, evdev._ecodes\""

[tool.cibuildwheel.linux]
# manylinux images are glibc/AlmaLinux based and normally ship kernel-headers
# (pulled in by glibc-devel), but evdev's build hard-fails without <linux/input.h>;
# ensure they are present. No-op when already installed.
before-all = "yum install -y kernel-headers || true"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.bumpversion]
current_version = "1.9.3"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "docs/conf.py"

[tool.pylint.'MESSAGES CONTROL']
disable = """
    no-member,
"""

[tool.pylint.typecheck]
generated-members = ["evdev.ecodes.*"]
ignored-modules= ["evdev._*"]
